# gimpsep-marruecos_procesamiento_imagen

./: CMakeLists.txt  advgui.cpp  advgui.h  advgui.ui  canny_edge_detection.cpp  erosion_dilation.cpp  erosion_dilation.h  lighten_darken.h  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panorama_stitching.cpp  panorama_stitching.h  resizing.cpp  resizing.h
